Fix homepage heading and sidebar wrapping

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -307,6 +307,11 @@
     white-space: nowrap;
   }
 
+  .author__desktop {
+    white-space: normal;
+    overflow-wrap: anywhere;
+  }
+
   a {
     display: block;
     margin-bottom: 5px;
